LPS-28369 Set LDAP connection pool parameters by using system properties

--- a/portal-impl/src/portal.properties
+++ b/portal-impl/src/portal.properties
@@ -2798,13 +2798,17 @@
     ldap.attrs.transformer.impl=com.liferay.portal.security.ldap.DefaultAttributesTransformer
 
     #
-    # Set the configuration values for LDAP connection pooling. Any property
-    # prefixed with "ldap.connection." will be passed to the LDAP context as an
+    # Set the configuration values for LDAP connections. Any property prefixed 
+    # with "ldap.connection." will be passed to the LDAP context as an
     # environment variable.
     #
+    # See the following link:
+    #
+    # http://docs.oracle.com/javase/6/docs/technotes/guides/jndi/jndi-ldap.html#POOL
+    #
     ldap.connection.com.sun.jndi.ldap.connect.pool=true
-    ldap.connection.com.sun.jndi.ldap.connect.pool.maxsize=50
-    ldap.connection.com.sun.jndi.ldap.connect.pool.timeout=10000
+    ldap.connection.com.sun.jndi.ldap.connect.timeout=500
+    ldap.connection.com.sun.jndi.ldap.read.timeout=15000
 
     #
     # Settings for importing users and groups from LDAP to the portal.
