LPS-28369 Incorrect LDAP connection pool setting

--- a/portal-impl/src/portal.properties
+++ b/portal-impl/src/portal.properties
@@ -2798,13 +2798,24 @@
     ldap.attrs.transformer.impl=com.liferay.portal.security.ldap.DefaultAttributesTransformer
 
     #
-    # Set the configuration values for LDAP connection pooling. Any property
-    # prefixed with "ldap.connection." will be passed to the LDAP context as an
+    # Set the configuration values for LDAP connections. Any property prefixed 
+    # with "ldap.connection." will be passed to the LDAP context as an
     # environment variable.
     #
+    # Note: To enable LDAP connection pooling, you will need to ensure that
+    # ldap.connection.com.sun.jndi.ldap.connect.pool=true and provide additional
+    # JVM system properties via the JVM start-up options, e.g.
+    #
+    # -Dldap.connection.com.sun.jndi.ldap.connect.pool.maxsize=50
+    # -Dldap.connection.com.sun.jndi.ldap.connect.pool.timeout=10000
+    #
+    # See the following links:
+    #
+    # http://docs.oracle.com/javase/6/docs/technotes/guides/jndi/jndi-ldap.html#POOL
+    #
     ldap.connection.com.sun.jndi.ldap.connect.pool=true
-    ldap.connection.com.sun.jndi.ldap.connect.pool.maxsize=50
-    ldap.connection.com.sun.jndi.ldap.connect.pool.timeout=10000
+    ldap.connection.com.sun.jndi.ldap.connect.timeout=500
+    ldap.connection.com.sun.jndi.ldap.read.timeout=15000
 
     #
     # Settings for importing users and groups from LDAP to the portal.
