--- a/portal-impl/src/portal.properties
+++ b/portal-impl/src/portal.properties
@@ -2802,6 +2802,13 @@
     # "ldap.connection." will be passed to the LDAP context as an environment
     # variable.
     #
+    # To enable LDAP connection pooling, you have to set
+    # "ldap.connection.com.sun.jndi.ldap.connect.pool" to true and provide
+    # additional JVM system properties via the JVM start-up options, e.g.
+    #
+    # -Dcom.sun.jndi.ldap.connect.pool.maxsize=50
+    # -Dcom.sun.jndi.ldap.connect.pool.timeout=10000
+    #
     # See the following link:
     #     http://docs.oracle.com/javase/6/docs/technotes/guides/jndi/jndi-ldap.html#POOL
     #
