LPS-29227 LockAcquisitionException after scheduling multiple pages to publish to remote live simultaneously

--- a/portal-impl/src/portal.properties
+++ b/portal-impl/src/portal.properties
@@ -6764,6 +6764,12 @@
     #
     staging.lock.enabled=false
 
+	#
+	# Set this property to the maximum number of times you want to attempt a
+	# scheduled publish to live.
+	#
+	publish.to.live.attempts=3
+
 ##
 ## Strip
 ##
