--- a/portal-impl/src/content/Language.properties
+++ b/portal-impl/src/content/Language.properties
@@ -5533,6 +5533,7 @@ thread-split=Thread Split
 thread-views=Thread Views
 thread=Thread
 threaded-replies=Threaded Replies
+threads-with-tag-x=Threads with tag <em>{0}</em>.
 threads=Threads
 three-columns=Three Columns
 thumbnail=Thumbnail
