--- a/portal-impl/src/portal.properties
+++ b/portal-impl/src/portal.properties
@@ -4946,6 +4946,7 @@
     editor.wysiwyg.portal-web.docroot.html.portlet.announcements.edit_entry.jsp=ckeditor
     editor.wysiwyg.portal-web.docroot.html.portlet.blogs.configuration.jsp=ckeditor
     editor.wysiwyg.portal-web.docroot.html.portlet.blogs.edit_entry.jsp=ckeditor
+    editor.wysiwyg.portal-web.docroot.html.portlet.bookmarks.configuration.jsp=ckeditor
     editor.wysiwyg.portal-web.docroot.html.portlet.calendar.configuration.jsp=ckeditor
     editor.wysiwyg.portal-web.docroot.html.portlet.calendar.edit_event.jsp=ckeditor
     editor.wysiwyg.portal-web.docroot.html.portlet.invitation.configuration.jsp=ckeditor
@@ -7892,6 +7893,24 @@
     # Set this to true if blogs should be published to live by default.
     #
     blogs.publish.to.live.by.default=false
+
+##
+## Bookmarks Portlet
+##
+
+    #
+    # Configure email notification settings.
+    #
+    bookmarks.email.from.name=
+    bookmarks.email.from.address=
+
+    bookmarks.email.entry.added.enabled=true
+    bookmarks.email.entry.added.subject=com/liferay/portlet/bookmarks/dependencies/email_entry_added_subject.tmpl
+    bookmarks.email.entry.added.body=com/liferay/portlet/bookmarks/dependencies/email_entry_added_body.tmpl
+
+    bookmarks.email.entry.updated.enabled=true
+    bookmarks.email.entry.updated.subject=com/liferay/portlet/bookmarks/dependencies/email_entry_updated_subject.tmpl
+    bookmarks.email.entry.updated.body=com/liferay/portlet/bookmarks/dependencies/email_entry_updated_body.tmpl
 
 ##
 ## Breadcrumb Portlet
