--- a/portal-impl/src/content/Language.properties
+++ b/portal-impl/src/content/Language.properties
@@ -5561,6 +5561,7 @@ to-email-joebloggs=* To email joebloggs@{0}, simply enter <em>joebloggs</em>
 to-manage-priorities,-drag-the-rule-group-to-the-desired-position=To manage priorities, drag the rule group to the desired position.
 to-tag-set=To Tag Set
 to-this-location=To This location
+to-use-shipping-formula,-please-also-ensure-the-shipping-calculation-was-set-via-shopping-portlet's-configuration=To use shipping formula, please also ensure the shipping calculation was set via shopping portlet's configuration.
 to-vocabulary=To Vocabulary
 to=To
 toad=Toad
