--- a/portal-impl/src/portal.properties
+++ b/portal-impl/src/portal.properties
@@ -8037,6 +8037,11 @@
     #dl.store.impl=com.liferay.portlet.documentlibrary.store.S3Store
 
     #
+    # AdvancedFileSystemStore
+    #
+    dl.store.advanced.file.system.root.dir=${liferay.home}/data/document_library_advanced
+
+    #
     # CMISStore
     #
     dl.store.cmis.credentials.username=none
