LPS-29936 Allow only publishing lastest journal article

--- a/portal-impl/src/portal.properties
+++ b/portal-impl/src/portal.properties
@@ -8677,6 +8677,12 @@
     journal.publish.to.live.by.default=true
 
     #
+    # Set this to true if only the latest approved journal article should be
+    # published.
+    #
+    journal.publish.latest.approved.version.only=false
+
+    #
     # Set whether to synchronize content searches when the server starts.
     #
     journal.sync.content.search.on.startup=false
