LPS-30070 There is no empty result message for wiki when there is no results in all pages tab

--- a/portal-impl/src/content/Language.properties
+++ b/portal-impl/src/content/Language.properties
@@ -5395,6 +5395,7 @@ there-are-no-pages-that-link-to-this-page=There are no pages that link to this p
 there-are-no-pages-that-link-to=There are no pages that link to
 there-are-no-pages-with-this-category=There are no pages with this category.
 there-are-no-pages-with-this-tag=There are no pages with this tag.
+there-are-no-pages=There are no pages.
 there-are-no-pending-instances-started-by-me=There are no pending publications requested by me.
 there-are-no-pending-instances=There are no pending publication requests.
 there-are-no-pending-tasks-assigned-to-you-with-the-specified-search-criteria=There are no pending tasks assigned to you with the specified search criteria.
