--- a/portal-impl/src/portal.properties
+++ b/portal-impl/src/portal.properties
@@ -8971,6 +8971,8 @@
 ## Navigation Portlet
 ##
 
+    navigation.display.style.default=relative-with-breadcrumb
+
     #
     # Specify the options that will be provided to the user in the edit
     # configuration mode of the portlet.
