LPS-48855 should not be able to submit duplicate orders by clicking finish multiple times. Only create new "latest orders" when the checkout process has been initiated.

--- a/portal-impl/src/content/Language.properties
+++ b/portal-impl/src/content/Language.properties
@@ -7230,6 +7230,7 @@ your-message-was-sent=Your message was sent.
 your-new-email-address-is-x=Your new email address is {0}.
 your-new-password-cannot-be-the-same-as-your-old-password-please-enter-in-a-different-password=Your new password cannot be the same as your old password. Please enter in a different password.
 your-order-cannot-be-processed-because-it-falls-below-the-minimum-required-amount-of-x=Your order cannot be processed because it falls below the minimum required amount of {0}.
+your-order-has-already-been-processed-please-check-your-email-for-your-order-summary-and-further-details=Your order has already been processed. Please check your email for your order summary and further details.
 your-order-number-is=Your order number is
 your-password-can-only-be-sent-to-an-external-email-address=Your password can only be sent to an external email address.
 your-password-cannot-be-changed=Your password cannot be changed.
