--- a/portal-impl/src/content/Language.properties
+++ b/portal-impl/src/content/Language.properties
@@ -3335,6 +3335,7 @@ max-attendees=Max Attendees
 max-concurrent-users=Max Concurrent Users
 max-num-of-tags=Max # of Tags
 max-num-of-users=Max # of Users
+max-number-of-users=Max Number of Users
 max-qty=Max Qty
 max-registered-users=Max Registered Users
 max-users=Max Users
@@ -3940,6 +3941,7 @@ number-of-editorial-stages=Number of Editorial Stages
 number-of-items-to-display=Number of Items to Display
 number-of-items-to-display-help=Maximum number of items to display if pagination is disabled, otherwise number of items to display per page.
 number-of-minutes=Number of Minutes
+number-of-users=Number of Users
 numbers=Numbers
 numeric=Numeric
 oauth-authentication-url=OAuth Authentication URL
