LPS-49173 Vaildate field names so that there are no duplicates

--- a/portal-impl/src/content/Language.properties
+++ b/portal-impl/src/content/Language.properties
@@ -2489,6 +2489,7 @@ female-voice=Female Voice
 field=Field
 field-label=Field Label
 field-name=Field Name
+field-names-must-be-unique-the-following-fields-are-duplicated-x=Field names must be unique. The following fields are duplicated: {0}.
 field-settings=Field Settings
 field-type=Field Type
 fields=Fields
