LPS-49173 Vaildate field names so that there are no duplicates

--- a/portal-impl/src/content/Language.properties
+++ b/portal-impl/src/content/Language.properties
@@ -2483,6 +2483,7 @@ female-voice=Female Voice
 field=Field
 field-label=Field Label
 field-name=Field Name
+field-names-must-be-unique=Field names must be unique.
 field-settings=Field Settings
 field-type=Field Type
 fields=Fields
