--- a/portal-impl/src/portal.properties
+++ b/portal-impl/src/portal.properties
@@ -2481,6 +2481,7 @@
         Pacific/Honolulu,\
         America/Anchorage,\
         America/Los_Angeles,\
+        US/Arizona,\
         America/Denver,\
         America/Chicago,\
         America/New_York,\
