LPS-49453 - Language Key Should Consider Singular and Plural Situation

--- a/portal-impl/src/content/Language.properties
+++ b/portal-impl/src/content/Language.properties
@@ -1593,7 +1593,7 @@ compare-to=Compare to...
 compare-versions=Compare Versions
 comparing-versions-x-and-x=Comparing Versions {0} and {1}
 completed=Completed
-completed-in-x-seconds=Completed in {0} seconds.
+completed-in-x-seconds=Completed in {0} second(s).
 completion-date=Completion Date
 components=Components
 compose=Compose
@@ -3089,8 +3089,8 @@ last-updated-x=Last Updated {0}
 last-version=Last Version
 last-vote-date=Last Vote Date
 last-week=Last Week
-last-x-structures=Last {0} Structures
-last-x-templates=Last {0} Templates
+last-x-structures=Last {0} Structure(s)
+last-x-templates=Last {0} Template(s)
 last-x-web-content=Last {0} Web Content
 latest-aproved-version=Latest Approved Version
 latest-aproved-version-author=Latest Approved Version Author
@@ -3399,7 +3399,7 @@ merge-site-pages-variation=Merge Site Pages Variation
 merge-tags=Merge Tags
 merge-with-parent-category=Merge with Parent Category
 merge-with-parent-folder=Merge with Parent Folder
-merge-x-public-pages=Merge {0} public pages
+merge-x-public-pages=Merge {0} public page(s)
 merged-from-x-x=(Merged from {0}, {1})
 message=Message
 message-added-email=Message Added Email
@@ -3645,7 +3645,7 @@ more-actions=More Actions
 more-information-about-liferay-is-available-at=More information about Liferay is available at {0}http://www.liferay.com{1}.
 more-options=More Options
 more-rows-at-bottom=More rows at bottom.
-more-x-results=More {0} Results
+more-x-results=More {0} Result(s)
 move=Move
 move-column=Move Column
 move-down=Move Down
@@ -4175,7 +4175,7 @@ paypal-order=PayPal Order
 pending=Pending
 pending-approval=Pending Approval
 pending-for-review=Pending for Review
-pending-friend-requests=Pending Friend Request(s)
+pending-friend-requests=Pending Friend Requests
 pending-requests=Pending Requests
 per=Per
 percentage=Percentage
@@ -4221,7 +4221,7 @@ please-be-patient-as-this-process-can-take-up-to-several-minutes=Please be patie
 please-be-patient-while-uploading-your-file=Please be patient while uploading your file. This may take several minutes.
 please-change-your-password=Please change your password.
 please-choose-a-reminder-query=Please choose a reminder query.
-please-choose-at-least-x-tags=Please choose at least {0} tags.
+please-choose-at-least-x-tags=Please choose at least {0} tag(s).
 please-choose-the-scope-of-the-pages-to-publish=Please choose the scope of the pages to publish.
 please-complete-all-fields=Please complete all fields.
 please-complete-your-order=Please {0}complete{1} your order.
@@ -4392,10 +4392,10 @@ please-enter-a-word-that-is-at-least-3-characters-long=Please enter a word that 
 please-enter-an-email-address=Please enter an email address.
 please-enter-at-least-one-category-for-all-mandatory-vocabularies=Please enter at least one category for all mandatory vocabularies.
 please-enter-at-least-one-tag=Please enter at least one tag.
-please-enter-at-list-x-characters=Please enter at least {0} characters.
+please-enter-at-list-x-characters=Please enter at least {0} character(s).
 please-enter-both-the-validation-code-and-the-error-message=Please enter both the validation code and the error message.
 please-enter-jdbc-information-for-new-database=Please enter JDBC information for new database.
-please-enter-no-more-than-x-characters=Please enter no more than {0} characters.
+please-enter-no-more-than-x-characters=Please enter no more than {0} character(s).
 please-enter-only-alpha-characters=Please enter only alpha characters.
 please-enter-only-alphanumeric-characters=Please enter only alphanumeric characters.
 please-enter-only-digits=Please enter only digits.
@@ -4595,8 +4595,8 @@ previous-page=Previous Page
 previous-thread=Previous Thread
 previous-year=Previous Year
 price=Price
-price-for-x-items-and-above=Price for {0} Items and Above:
-price-for-x-to-x-items=Price for {0} to {1} Items:
+price-for-x-items-and-above=Price for {0} Item(s) and Above:
+price-for-x-to-x-items=Price for {0} to {1} Item(s):
 prices=Prices
 primary=Primary
 primary-address=Primary Address
@@ -4755,9 +4755,9 @@ receive-a-notification-when-someone-updates-a-document-you-are-subscribed-to=upd
 receive-a-notification-when-someone-updates-a-post-you-are-subscribed-to=updates a post you are subscribed to.
 receive-a-notification-when-someone-updates-a-web-content-you-are-subscribed-to=updates a web content you are subscribed to.
 receive-a-notification-when-someone-updates-a-wiki-page-you-are-subscribed-to=updates a wiki page you are subscribed to.
-receive-x-announcements-via-email=Receive {0} announcements via email.
-receive-x-announcements-via-sms=Receive {0} announcements via SMS.
-receive-x-announcements-via-website=Receive {0} announcements via website.
+receive-x-announcements-via-email=Receive {0} announcement(s) via email.
+receive-x-announcements-via-sms=Receive {0} announcement(s) via SMS.
+receive-x-announcements-via-website=Receive {0} announcement(s) via website.
 receiver-email-address=Receiver Email Address
 recent=Recent
 recent-changes=Recent Changes
@@ -5106,7 +5106,7 @@ search-templates=Search Templates
 search-this-category=Search This Category
 search-this-folder=Search This Folder
 search-threads=Search Threads
-search-took-x-seconds=Search took {0} seconds.
+search-took-x-seconds=Search took {0} second(s).
 search-topics=Search Topics
 search-user-groups=Search User Groups
 search-users=Search Users
@@ -6010,7 +6010,7 @@ the-product-could-not-be-found=The product could not be found.
 the-product-version-could-not-be-found=The product version could not be found.
 the-project-cannot-be-deleted-because-it-has-associated-tasks=The project cannot be deleted because it has associated tasks.
 the-project-could-not-be-found=The project could not be found.
-the-propagation-of-changes-from-the-x-has-been-disabled-temporarily-after-x-errors=The propagation of changes from the {1} has been disabled temporarily after {0} errors.
+the-propagation-of-changes-from-the-x-has-been-disabled-temporarily-after-x-errors=The propagation of changes from the {1} has been disabled temporarily after {0} error(s).
 the-proposal-could-not-be-found=The proposal could not be found.
 the-public-site-url-of-the-user-who-added-the-blog-entry=The public site URL of the user who added the blog entry
 the-publication-process-did-not-start-due-to-validation-errors=The publication process did not start due to validation errors.
@@ -6142,7 +6142,8 @@ theme-plugins=Theme Plugins
 theme-settings=Theme Settings
 themes=Themes
 there-are-content-references-to-this-structure.-you-may-lose-data-if-a-field-name-is-renamed-or-removed=There are content references to this structure. You may lose data if a field name is renamed or removed.
-there-are-currently-x-users-in-x-rooms=There are currently {0} users in {1} rooms.
+there-are-currently-x-users-in-x-rooms=There are currently {0} user(s) in {1} room(s).
+there-is-currently-x-user-in-x-room=There is currently {0} user(s) in {1} room(s).
 there-are-missing-references-that-could-not-be-found-in-the-current-site=There are missing references that could not be found in the current site. Please import the following elements first:
 there-are-missing-references-that-could-not-be-found-in-the-live-environment-the-following-elements-are-published-from-their-own-site=There are missing references that could not be found in the Live Environment. Please publish again to Live ensuring the following elements are published from their own site:
 there-are-no-actions=There are no actions.
@@ -6253,6 +6254,7 @@ there-are-no-vocabularies=There are no vocabularies.
 there-are-no-workflow-definitions=There are no workflow definitions.
 there-are-template-references-to-this-structure.-please-update-them-if-a-field-name-is-renamed-or-removed=There are template references to this structure. Please update them if a field name is renamed or removed.
 there-are-x-membership-requests-pending=There are {0} membership requests pending.
+there-is-one-membership-request-pending=There is one membership request pending.
 there-is-a-publication-workflow-in-process=There is a publication workflow in process. Some actions may be disabled depending on the status and your role through this process.
 there-is-already-a-page-with-the-specified-title=There is already a page with the specified title.
 there-is-another-category-with-the-same-name-and-the-same-parent=There is another category with the same name and the same parent.
@@ -6643,7 +6645,7 @@ use-the-same-look-and-feel-of-the-x=Use the same look and feel of the {0}.
 use-the-same-mobile-device-rules-of-the-x=Use the same mobile device rules of the {0}.
 use-x's-preferred-language-(x)=Use {0}'s preferred language ({1}).
 use-your-preferred-language-(x)=Use your preferred language ({0}).
-used-in-x-assets=Used in {0} Assets
+used-in-x-assets=Used in {0} Asset(s)
 used-memory=Used Memory
 user=User
 user-added-email=User Added Email
@@ -6997,10 +6999,10 @@ x-forum-posts={0} Forum Posts
 x-has-invited-you-to-join-x={0} has invited you to join {1}.
 x-has-not-configured-her-jira-login={0} has not configured her JIRA login.
 x-has-not-configured-his-jira-login={0} has not configured his JIRA login.
-x-has-x-friends={0} has {1} friends.
+x-has-x-friends={0} has {1} friend(s).
 x-history={0} History
-x-hours={0} Hours
-x-hours-ago={0} hours ago.
+x-hours={0} Hour(s)
+x-hours-ago={0} hour(s) ago.
 x-in-x={0} in {1}
 x-inactive-user={0} Inactive User
 x-inactive-users={0} Inactive Users
@@ -7199,7 +7201,7 @@ you-have-successfully-updated-your-preferences=You have successfully updated you
 you-have-the-following-tags-configured-x=You have the following tags configured: {0}.
 you-have-to-be-x's-friend-to-access-her-wall=You have to be {0}'s friend to access her wall.
 you-have-to-be-x's-friend-to-access-his-wall=You have to be {0}'s friend to access his wall.
-you-have-x-friends=You have {0} friends.
+you-have-x-friends=You have {0} friend(s).
 you-may-lose-formatting-when-switching-from-x-to-x=You may lose some formatting when switching from {0} to {1}. Do you want to continue?
 you-may-only-vote-once=You may only vote once.
 you-may-use-the-tokens-email-address-screen-name-userid=You may use the tokens @email_address@, @screen_name@, and @user_id@ for the user name field. These will be replaced at runtime with the current user's information.
