--- a/portal-impl/src/portal.properties
+++ b/portal-impl/src/portal.properties
@@ -2481,7 +2481,7 @@
         Pacific/Honolulu,\
         America/Anchorage,\
         America/Los_Angeles,\
-        US/Arizona,\
+        America/Phoenix,\
         America/Denver,\
         America/Chicago,\
         America/New_York,\
