--- a/modules/apps/layout/layout-taglib/build.gradle
+++ b/modules/apps/layout/layout-taglib/build.gradle
@@ -15,6 +15,7 @@ dependencies {
 	compileOnly project(":apps:frontend-taglib:frontend-taglib-soy")
 	compileOnly project(":apps:frontend-taglib:frontend-taglib-util")
 	compileOnly project(":apps:info:info-api")
+	compileOnly project(":apps:item-selector:item-selector-api")
 	compileOnly project(":apps:layout:layout-api")
 	compileOnly project(":apps:layout:layout-content-page-editor-api")
 	compileOnly project(":apps:layout:layout-page-template-api")
