--- a/modules/apps/layout/layout-type-controller/layout-type-controller-portlet/build.gradle
+++ b/modules/apps/layout/layout-type-controller/layout-type-controller-portlet/build.gradle
@@ -9,6 +9,7 @@ dependencies {
 	compileOnly project(":apps:frontend-taglib:frontend-taglib")
 	compileOnly project(":apps:frontend-taglib:frontend-taglib-clay")
 	compileOnly project(":apps:info:info-api")
+	compileOnly project(":apps:item-selector:item-selector-api")
 	compileOnly project(":apps:layout:layout-api")
 	compileOnly project(":apps:layout:layout-page-template-api")
 	compileOnly project(":apps:layout:layout-type-controller:layout-type-controller-api")
