LPS-105380 Only enable for master, Alan will revert when violations are fixed on other branches

--- a/source-formatter.properties
+++ b/source-formatter.properties
@@ -317,6 +317,8 @@
 
     source.check.JavaSignatureParametersCheck.enabled=true
 
+    source.check.JavaTestMethodAnnotationsCheck.enabled=true
+
     source.check.PropertiesBuildIncludeDirsCheck.buildIncludeCategoryNames=\
         apps,\
         core,\
