--- a/source-formatter.properties
+++ b/source-formatter.properties
@@ -212,6 +212,9 @@
 
     checkstyle.MissingDiamondOperatorCheck.enforceDiamondOperatorClassNames=ArrayList,ConcurrentHashMap,ConcurrentSkipListMap,ConcurrentSkipListSet,CopyOnWriteArraySet,EnumMap,HashMap,HashSet,Hashtable,IdentityHashMap,LinkedHashMap,LinkedHashSet,LinkedList,Stack,TreeMap,TreeSet,Vector
 
+    checkstyle.MissingEmptyLineCheck.variableTypeNameMethods=\
+        Registry:register
+
     checkstyle.OperatorOperandCheck.enabled=true
 
     checkstyle.TryWithResourcesCheck.enabled=true
