LPS-115366 Update documentation link

--- a/build.properties
+++ b/build.properties
@@ -481,8 +481,8 @@
     # Subscription to the Translator Text Translation API on Microsoft Cognitive
     # Services is required. Basic subscriptions, up to 2 million characters a
     # month, are free. See
-    # http://docs.microsofttranslator.com/text-translate.html for more
-    # information.
+    # https://docs.microsoft.com/en-us/azure/cognitive-services/translator/translator-how-to-signup
+    # for more information.
     #
     microsoft.translator.subscription.key=
 
