--- a/modules/util/source-formatter/src/main/resources/META-INF/maven/plugin.xml
+++ b/modules/util/source-formatter/src/main/resources/META-INF/maven/plugin.xml
@@ -7,7 +7,7 @@
 	<description/>
 	<groupId>com.liferay</groupId>
 	<artifactId>com.liferay.source.formatter</artifactId>
-	<version>1.0.1012</version>
+	<version>1.0.1013</version>
 	<goalPrefix>source-formatter</goalPrefix>
 	<isolatedRealm>false</isolatedRealm>
 	<inheritedByDefault>true</inheritedByDefault>
@@ -37,6 +37,20 @@
 				<parameter>
 					<name>baseDir</name>
 					<type>java.lang.String</type>
+					<required>false</required>
+					<editable>true</editable>
+					<description/>
+				</parameter>
+				<parameter>
+					<name>failOnAutoFix</name>
+					<type>boolean</type>
+					<required>false</required>
+					<editable>true</editable>
+					<description/>
+				</parameter>
+				<parameter>
+					<name>failOnHasWarning</name>
+					<type>boolean</type>
 					<required>false</required>
 					<editable>true</editable>
 					<description/>
@@ -120,13 +134,6 @@
 				</parameter>
 				<parameter>
 					<name>showStatusUpdates</name>
-					<type>boolean</type>
-					<required>false</required>
-					<editable>true</editable>
-					<description/>
-				</parameter>
-				<parameter>
-					<name>throwException</name>
 					<type>boolean</type>
 					<required>false</required>
 					<editable>true</editable>
