LPS-105380 Check against type name

--- a/source-formatter.properties
+++ b/source-formatter.properties
@@ -213,7 +213,7 @@
     checkstyle.MissingDiamondOperatorCheck.enforceDiamondOperatorClassNames=ArrayList,ConcurrentHashMap,ConcurrentSkipListMap,ConcurrentSkipListSet,CopyOnWriteArraySet,EnumMap,HashMap,HashSet,Hashtable,IdentityHashMap,LinkedHashMap,LinkedHashSet,LinkedList,Stack,TreeMap,TreeSet,Vector
 
     checkstyle.MissingEmptyLineCheck.enforceEmptyLineAfterMethodNames=\
-        registry.register
+        Registry.register
 
     checkstyle.OperatorOperandCheck.enabled=true
 
