--- a/source-formatter.properties
+++ b/source-formatter.properties
@@ -262,6 +262,8 @@
 
     source.check.JavaComponentActivateCheck.enabled=true
 
+    source.check.JavaComponentAnnotationsCheck.disabledModuleNames=
+
     source.check.JavaExceptionCheck.enabled=false
 
     source.check.JavaHelperUtilCheck.enabled=true
