LPS-129532 Only enable for master

--- a/source-formatter.properties
+++ b/source-formatter.properties
@@ -210,6 +210,8 @@
         portal-kernel/src/com/liferay/portal/kernel/json/JSONArray.java,\
         portal-kernel/src/com/liferay/portal/kernel/json/JSONObject.java
 
+    checkstyle.CompanyIterationCheck.enabled=true
+
     checkstyle.CreationMenuBuilderCheck.enabled=true
 
     checkstyle.DeprecatedUsageCheck.allowedFullyQualifiedClassNames=\
