--- a/source-formatter.properties
+++ b/source-formatter.properties
@@ -477,6 +477,8 @@
 
     source.check.JavaTestMethodAnnotationsCheck.enabled=true
 
+    source.check.JavaUnnecessaryMethodCallsCheck.enabled=true
+
     source.check.JSPJavaParserCheck.enabled=true
 
     source.check.JSPMethodCallsCheck.enabled=true
