LPS-105380 Only apply to master for now

--- a/source-formatter.properties
+++ b/source-formatter.properties
@@ -473,6 +473,8 @@
 
     source.check.JavaSignatureParametersCheck.enabled=true
 
+    source.check.JavaStaticMethodCheck.checkFinal=true
+
     source.check.JavaStaticMethodCheck.enabled=true
 
     source.check.JavaTestMethodAnnotationsCheck.enabled=true
