LPS-130505 Enable check for test

--- a/modules/util/source-formatter/source-formatter.properties
+++ b/modules/util/source-formatter/source-formatter.properties
@@ -20,3 +20,5 @@
 
     source.check.NewFileCheck.forbiddenDirNames=\
         modules/util/source-formatter/documentation/
+
+    source.check.JavaUnnecessaryMethodCallsCheck.enabled=true
