LPS-119446 Only check modules

--- a/modules/source-formatter.properties
+++ b/modules/source-formatter.properties
@@ -5,6 +5,8 @@
 ## for available properties.
 ##
 
+    checkstyle.PortletURLBuilderCheck.enabled=true
+
     source.check.GradleDependencyArtifactsCheck.enforceVersionArtifacts=\
         biz.aQute.bnd:biz.aQute.bnd.annotation:4.2.0,\
         com.fasterxml.jackson.core:jackson-annotations:2.10.3,\
