--- a/source-formatter.properties
+++ b/source-formatter.properties
@@ -308,6 +308,8 @@
 
     #checkstyle.TryWithResourcesCheck.populateTypeNames=true
 
+    checkstyle.UnnecessaryMethodCallCheck.enabled=true
+
     checkstyle.VariableNameCheck.enabled=true
 
     checkstyle.VariableNameCheck.enforceTypeNames=\
