LPS-131175 Enable check for test

--- a/modules/util/source-formatter/source-formatter.properties
+++ b/modules/util/source-formatter/source-formatter.properties
@@ -10,6 +10,8 @@
 
     checkstyle.ExceptionVariableNameCheck.enabled=true
 
+    checkstyle.UnnecessaryMethodCallCheck.enabled=true
+
     checkstyle.VariableNameCheck.enabled=true
 
     #source.check.JavaSourceFormatterDocumentationCheck.enabled=true
