LPS-105380 Enforce variable naming for 'ServiceRegistrationMap'

--- a/source-formatter.properties
+++ b/source-formatter.properties
@@ -275,6 +275,7 @@
         PowerMockitoStubber,\
         Query,\
         QueryPos,\
+        ServiceRegistrationMap,\
         SQLQuery,\
         Throwable,\
         UnicodeProperties,\
@@ -335,6 +336,7 @@
         PowerMockitoStubber,\
         Query,\
         QueryPos,\
+        ServiceRegistrationMap,\
         SQLQuery,\
         Throwable,\
         UnicodeProperties,\
