LPS-105380 Enforce variables names for types Connection/PreparedStatement/ResultSet

--- a/source-formatter.properties
+++ b/source-formatter.properties
@@ -260,6 +260,7 @@
         .*ContextContributor,\
         BaseUpgradeServiceModuleRelease,\
         BundleContext,\
+        Connection,\
         DetailAST,\
         Enumeration,\
         HttpContext,\
@@ -273,8 +274,10 @@
         Pattern,\
         PingResultModel,\
         PowerMockitoStubber,\
+        PreparedStatement,\
         Query,\
         QueryPos,\
+        ResultSet,\
         ServiceRegistrationMap,\
         SQLQuery,\
         Throwable,\
@@ -322,6 +325,7 @@
         .*URLProvider,\
         BaseUpgradeServiceModuleRelease,\
         BundleContext,\
+        Connection,\
         DetailAST,\
         Enumeration,\
         HttpContext,\
@@ -336,8 +340,10 @@
         Pattern,\
         PingResultModel,\
         PowerMockitoStubber,\
+        PreparedStatement,\
         Query,\
         QueryPos,\
+        ResultSet,\
         ServiceRegistrationMap,\
         SQLQuery,\
         Throwable,\
