LPS-119446 Make checks configurable so you can specify which builders to check

--- a/modules/source-formatter.properties
+++ b/modules/source-formatter.properties
@@ -5,7 +5,7 @@
 ## for available properties.
 ##
 
-    checkstyle.PortletURLBuilderCheck.enabled=true
+    checkstyle.PortletURLBuilderCheck.enforceBuilderNames=PortletURLBuilder
 
     source.check.GradleDependencyArtifactsCheck.enforceVersionArtifacts=\
         biz.aQute.bnd:biz.aQute.bnd.annotation:4.2.0,\
