--- a/source-formatter.properties
+++ b/source-formatter.properties
@@ -210,7 +210,7 @@
         portal-kernel/src/com/liferay/portal/kernel/json/JSONArray.java,\
         portal-kernel/src/com/liferay/portal/kernel/json/JSONObject.java
 
-    checkstyle.CreationMenuBuilderCheck.enabled=true
+    checkstyle.CreationMenuBuilderCheck.enforceBuilderNames=CreationMenuBuilder
 
     checkstyle.DeprecatedUsageCheck.allowedFullyQualifiedClassNames=\
         com.liferay.portal.kernel.comment.CommentConstants,\
@@ -247,9 +247,17 @@
 
     #checkstyle.GenericTypeCheck.populateTypeNames=true
 
-    checkstyle.ItemListBuilderCheck.enabled=true
+    checkstyle.ItemListBuilderCheck.enforceBuilderNames=\
+        DropdownItemListBuilder,\
+        LabelItemListBuilder,\
+        NavigationItemListBuilder
 
-    checkstyle.MapBuilderCheck.enabled=true
+    checkstyle.MapBuilderCheck.enforceBuilderNames=\
+        ConcurrentHashMapBuilder,\
+        HashMapBuilder,\
+        HashMapDictionaryBuilder,\
+        LinkedHashMapBuilder,\
+        TreeMapBuilder
 
     checkstyle.MethodNamingCheck.enabled=true
 
