--- a/build.properties
+++ b/build.properties
@@ -146,6 +146,7 @@
     #    apps/data-cleanup,\
     #    apps/data-engine,\
     #    apps/depot,\
+    #    apps/digital-signature,\
     #    apps/dispatch,\
     #    apps/document-library,\
     #    apps/document-library-google-docs,\
