LPS-105380 Add dependencies

--- a/modules/util/portal-tools-soy-builder/build.gradle
+++ b/modules/util/portal-tools-soy-builder/build.gradle
@@ -20,6 +20,7 @@ dependencies {
 	compile group: "org.sonatype.plexus", name: "plexus-build-api", transitive: false, version: "0.0.7"
 
 	compileInclude group: "com.beust", name: "jcommander", version: "1.48"
+	compileInclude group: "com.liferay", name: "com.liferay.petra.lang", version: "5.0.0"
 	compileInclude group: "com.liferay", name: "com.liferay.petra.string", version: "5.0.0"
 
 	compileOnly group: "org.apache.ant", name: "ant", transitive: false, version: "1.10.9"
