Revert "auto SF"
This reverts commit e91f4417e6148676e469adfe3e5e010e881b03f0.

--- a/modules/apps/item-selector/item-selector-taglib/tsconfig.json
+++ b/modules/apps/item-selector/item-selector-taglib/tsconfig.json
@@ -1,6 +1,7 @@
 {
 	"@generated": "34c740cd2f79b8647ad871f9f5fba449f27dbb4a",
-	"@overrides": {},
+	"@overrides": {
+	},
 	"@readonly": "** AUTO-GENERATED: DO NOT EDIT OUTSIDE @overrides **",
 	"@see": "https://git.io/JY2EA",
 	"compilerOptions": {
@@ -23,9 +24,15 @@
 		"strict": true,
 		"target": "es6",
 		"tsBuildInfoFile": "tmp/tsconfig.tsbuildinfo",
-		"typeRoots": ["../../../node_modules/@types", "./node_modules/@types"]
+		"typeRoots": [
+			"../../../node_modules/@types",
+			"./node_modules/@types"
+		]
 	},
-	"include": ["src/**/*", "test/**/*"],
+	"include": [
+		"src/**/*",
+		"test/**/*"
+	],
 	"references": [
 		{
 			"path": "../../frontend-js/frontend-js-react-web"
