--- a/source-formatter.properties
+++ b/source-formatter.properties
@@ -421,6 +421,8 @@
 
     source.check.GradleDependencyArtifactsCheck.renameArtifacts=
 
+    source.check.JavaClassNameCheck.checkRegistrar=true
+
     source.check.JavaComponentActivateCheck.enabled=true
 
     source.check.JavaComponentAnnotationsCheck.enterpriseAppModulePathNames=\
