LPS-105380 Update existing checks

--- a/modules/source-formatter.properties
+++ b/modules/source-formatter.properties
@@ -152,5 +152,5 @@
         StagedModelRepository:exportimport.staged.model.repository,\
         StrutsAction:struts,\
         TemplateContextContributor:template,\
-        UpgradeStepRegistrator:upgrade,\
+        UpgradeStepRegistrar:upgrade,\
         XStreamConfigurator:xstream.configurator
