LPS-105380 Disable checks

--- a/source-formatter.properties
+++ b/source-formatter.properties
@@ -395,11 +395,15 @@
 
     source.check.GradleDependencyArtifactsCheck.renameArtifacts=
 
+    source.check.GradleRequiredDependenciesCheck.enabled=false
+
     source.check.JavaComponentAnnotationsCheck.enterpriseAppModulePathNames=\
         modules/apps/commerce,\
         modules/dxp/apps/commerce,\
         modules/dxp/apps/commerce-demo-pack,\
         modules/dxp/apps/commerce-punchout
+
+    source.check.JavaExceptionCheck.enabled=false
 
     source.check.JavaIgnoreAnnotationCheck.classNamesBlacklist=\
         com.liferay.portal.log.assertor.PortalLogAssertorTest
@@ -456,6 +460,10 @@
         .*OSGiCommands:osgi.commands
 
     source.check.JavaStaticMethodCheck.checkFinal=true
+
+    source.check.JSPArrowFunctionCheck.enabled=false
+
+    source.check.JSPServiceUtilCheck.enabled=false
 
     source.check.PropertiesBuildIncludeDirsCheck.buildIncludeCategoryNames=\
         apps,\
