--- a/source-formatter.properties
+++ b/source-formatter.properties
@@ -505,6 +505,8 @@
 
     source.check.JSPMethodCallsCheck.enabled=true
 
+    source.check.PoshiEmptyLinesCheck.enabled=true
+
     source.check.PropertiesBuildIncludeDirsCheck.buildIncludeCategoryNames=\
         apps,\
         core,\
