--- a/modules/util/source-formatter/source-formatter.properties
+++ b/modules/util/source-formatter/source-formatter.properties
@@ -22,3 +22,5 @@
 
     source.check.NewFileCheck.forbiddenDirNames=\
         modules/util/source-formatter/documentation/
+
+    source.check.PoshiEmptyLinesCheck.enabled=true
