--- a/modules/apps/batch-engine/batch-engine-web/build.gradle
+++ b/modules/apps/batch-engine/batch-engine-web/build.gradle
@@ -14,4 +14,5 @@ dependencies {
 	compileOnly project(":core:petra:petra-function")
 	compileOnly project(":core:petra:petra-lang")
 	compileOnly project(":core:petra:petra-sql-dsl-api")
+	compileOnly project(":core:petra:petra-string")
 }
