--- a/modules/apps/commerce/commerce-tax-engine-remote/build.gradle
+++ b/modules/apps/commerce/commerce-tax-engine-remote/build.gradle
@@ -14,8 +14,8 @@ dependencies {
 	compileOnly project(":apps:petra:petra-apache-http-components")
 	compileOnly project(":apps:static:portal-configuration:portal-configuration-metatype-api")
 	compileOnly project(":core:petra:petra-lang")
+	compileOnly project(":core:petra:petra-string")
 
 	testCompile group: "com.fasterxml.jackson.core", name: "jackson-annotations", version: "2.10.3"
 	testCompile group: "org.mockito", name: "mockito-core", version: "1.10.8"
-	testCompile project(":core:petra:petra-string")
 }
