--- a/modules/apps/portal-security-sso-google/portal-security-sso-google-login-authentication-web/build.gradle
+++ b/modules/apps/portal-security-sso-google/portal-security-sso-google-login-authentication-web/build.gradle
@@ -8,6 +8,7 @@ dependencies {
 	compileOnly project(":apps:portal-security-sso-google:portal-security-sso-google-api")
 	compileOnly project(":core:petra:petra-lang")
 	compileOnly project(":core:petra:petra-sql-dsl-api")
+	compileOnly project(":core:petra:petra-string")
 }
 
 findSecurityBugs {
