--- a/modules/dxp/apps/commerce/commerce-application-item-selector-web/build.gradle
+++ b/modules/dxp/apps/commerce/commerce-application-item-selector-web/build.gradle
@@ -12,6 +12,7 @@ dependencies {
 	compileOnly project(":apps:petra:petra-portlet-url-builder")
 	compileOnly project(":core:petra:petra-lang")
 	compileOnly project(":core:petra:petra-sql-dsl-api")
+	compileOnly project(":core:petra:petra-string")
 	compileOnly project(":dxp:apps:commerce:commerce-application-api")
 	compileOnly project(":dxp:apps:commerce:commerce-application-item-selector-api")
 }
