--- a/modules/apps/google-places/google-places-web/build.gradle
+++ b/modules/apps/google-places/google-places-web/build.gradle
@@ -8,4 +8,5 @@ dependencies {
 	compileOnly group: "org.osgi", name: "osgi.core", version: "6.0.0"
 	compileOnly project(":apps:portal-settings:portal-settings-api")
 	compileOnly project(":apps:site:site-api")
+	compileOnly project(":core:petra:petra-string")
 }
