--- a/source-formatter.properties
+++ b/source-formatter.properties
@@ -274,6 +274,7 @@
         Page,\
         Pattern,\
         PingResultModel,\
+        PortalCache,\
         PowerMockitoStubber,\
         PreparedStatement,\
         Query,\
@@ -331,6 +332,7 @@
         Page,\
         Pattern,\
         PingResultModel,\
+        PortalCache,\
         PowerMockitoStubber,\
         PreparedStatement,\
         Query,\
