--- a/modules/apps/commerce/commerce-test/build.gradle
+++ b/modules/apps/commerce/commerce-test/build.gradle
@@ -23,5 +23,6 @@ dependencies {
 	testIntegrationCompile project(":apps:commerce:commerce-tax-api")
 	testIntegrationCompile project(":apps:commerce:commerce-test-util")
 	testIntegrationCompile project(":apps:friendly-url:friendly-url-api")
+	testIntegrationCompile project(":core:petra:petra-string")
 	testIntegrationCompile project(":test:arquillian-extension-junit-bridge")
 }
