--- a/modules/apps/push-notifications/push-notifications-sender/push-notifications-sender-apple/build.gradle
+++ b/modules/apps/push-notifications/push-notifications-sender/push-notifications-sender-apple/build.gradle
@@ -14,4 +14,5 @@ dependencies {
 	compileOnly project(":apps:push-notifications:push-notifications-api")
 	compileOnly project(":apps:static:osgi:osgi-util")
 	compileOnly project(":apps:static:portal-configuration:portal-configuration-metatype-api")
+	compileOnly project(":core:petra:petra-string")
 }
