--- a/modules/dxp/apps/analytics/analytics-reports-test/build.gradle
+++ b/modules/dxp/apps/analytics/analytics-reports-test/build.gradle
@@ -11,6 +11,7 @@ dependencies {
 	testIntegrationCompile project(":apps:portal-configuration:portal-configuration-test-util")
 	testIntegrationCompile project(":apps:product-navigation:product-navigation-control-menu-api")
 	testIntegrationCompile project(":core:petra:petra-function")
+	testIntegrationCompile project(":core:petra:petra-string")
 	testIntegrationCompile project(":dxp:apps:analytics:analytics-reports-api")
 	testIntegrationCompile project(":test:arquillian-extension-junit-bridge")
 }
