LPS-105380 Class implementing BundleActivator should be in package *.activator

--- a/modules/source-formatter.properties
+++ b/modules/source-formatter.properties
@@ -109,6 +109,7 @@
         rome:rome->com.liferay:com.sun.syndication
 
     source.check.JavaClassNameCheck.enforceImplementedClassNames=\
+        BundleActivator,\
         ConfigurationBeanDeclaration,\
         ConfigurationModelListener,\
         ConfigurationPidMapping,\
@@ -136,6 +137,7 @@
         osgi.commands:OSGiCommands
 
     source.check.JavaPackagePathCheck.expectedInternalImplementsData=\
+        BundleActivator:activator,\
         ConfigurationBeanDeclaration:settings.definition,\
         ConfigurationModelListener:configuration.persistence.listener,\
         ConfigurationPidMapping:configuration.definition,\
