LPS-105380 Standardize classes implementing BasicInfoListRenderer or BorderedBasicInfoListRenderer

--- a/modules/source-formatter.properties
+++ b/modules/source-formatter.properties
@@ -109,6 +109,8 @@
         rome:rome->com.liferay:com.sun.syndication
 
     source.check.JavaClassNameCheck.enforceImplementedClassNames=\
+        BasicInfoListRenderer,\
+        BorderedBasicInfoListRenderer,\
         BundleActivator,\
         ConfigurationBeanDeclaration,\
         ConfigurationModelListener,\
