--- a/modules/source-formatter.properties
+++ b/modules/source-formatter.properties
@@ -128,6 +128,7 @@
         MVCRenderCommand,\
         PermissionUpdateHandler,\
         PortalSettingsConfigurationScreenContributor,\
+        PortletSharedSearchContributor,\
         ResultRowSplitter,\
         ScreenNavigationCategory,\
         StagedModelRepository,\
