LPS-105380 Class implementing PortletSharedSearchContributor should be in package *.portlet.shared.search

--- a/modules/source-formatter.properties
+++ b/modules/source-formatter.properties
@@ -159,6 +159,7 @@
         PanelCategory:application.list,\
         PermissionUpdateHandler:security.permission,\
         PortalSettingsConfigurationScreenContributor:portal.settings.configuration.admin.display,\
+        PortletSharedSearchContributor:portlet.shared.search,\
         ResultRowSplitter:dao.search,\
         StagedModelRepository:exportimport.staged.model.repository,\
         StrutsAction:struts,\
