LPS-105380 Skip test dependencies

--- a/source-formatter.properties
+++ b/source-formatter.properties
@@ -15,6 +15,7 @@
         **/build_gradle/**,\
         **/bundles/**,\
         **/portal-web/test/functional/com/liferay/portalweb/dependencies/**,\
+        **/portal-web/test/functional/com/liferay/portalweb/tests/**/dependencies/**,\
         **/tools/sdk/**,\
         **/webapps/**,\
         definitions/web-facesconfig_1_2.xml,\
