LPS-105380 Enforce naming for type 'Column'

--- a/source-formatter.properties
+++ b/source-formatter.properties
@@ -273,6 +273,7 @@
         AssetRendererFactory,\
         BaseUpgradeServiceModuleRelease,\
         BundleContext,\
+        Column,\
         Connection,\
         DetailAST,\
         Enumeration,\
@@ -335,6 +336,7 @@
         AssetRendererFactory,\
         BaseUpgradeServiceModuleRelease,\
         BundleContext,\
+        Column,\
         Connection,\
         DetailAST,\
         Enumeration,\
