--- a/source-formatter.properties
+++ b/source-formatter.properties
@@ -196,6 +196,8 @@
     # in the checkstyle.xml configuration file. See
     # https://github.com/liferay/liferay-portal/blob/master/modules/util/source-formatter/src/main/resources/checkstyle.xml
     #
+    checkstyle.AppendCheck.enabled=true
+
     checkstyle.ChainingCheck.allowConcatChain=false
 
     checkstyle.ChainingCheck.allowedClassNames=
